--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <title>Sudoku Solver</title>
 <script src ="Web/solver.js"> </script>
-
+<script>
+if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+ alert("welcome mobile user");
+}
+</script>
 
 
 
