--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <title>Sudoku Solver</title>
 <script src ="Web/solver.js"> </script>
-<script>
-if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
- alert("welcome mobile user");
-}
-</script>
+
 
 
 
@@ -31,6 +27,32 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
    <canvas id="gridSpace" width="800" height="800" style="border:1px solid #d3d3d3;"></canvas>
 
 </div>
+
+<script>
+if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+ alert("welcome mobile user");
+}
+
+var input = new CanvasInput({
+  canvas: document.getElementById('gridSpace'),
+  fontSize: 18,
+  fontFamily: 'Arial',
+  fontColor: '#212121',
+  fontWeight: 'bold',
+  width: 300,
+  padding: 8,
+  borderWidth: 1,
+  borderColor: '#000',
+  borderRadius: 3,
+  boxShadow: '1px 1px 0px #fff',
+  innerShadow: '0px 0px 5px rgba(0, 0, 0, 0.5)',
+  placeHolder: 'Enter message here...'
+});
+
+
+</script>
+
+
 
 <script src="Web/interface.js"></script>
 <script>
