--- a/index.html
+++ b/index.html
@@ -33,21 +33,6 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
  alert("welcome mobile user");
 }
 
-var input = new CanvasInput({
-  canvas: document.getElementById('gridSpace'),
-  fontSize: 18,
-  fontFamily: 'Arial',
-  fontColor: '#212121',
-  fontWeight: 'bold',
-  width: 300,
-  padding: 8,
-  borderWidth: 1,
-  borderColor: '#000',
-  borderRadius: 3,
-  boxShadow: '1px 1px 0px #fff',
-  innerShadow: '0px 0px 5px rgba(0, 0, 0, 0.5)',
-  placeHolder: 'Enter message here...'
-});
 
 
 </script>
@@ -65,7 +50,7 @@ var input = new CanvasInput({
 
 
 
-
+<input type="hidden" name="Language" value="English">
  
 
 
