--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
 
 <script src="Web/interface.js"></script>
 <script>
+  $("#mobile").focus();
   init();
   main();
 </script>
@@ -50,7 +51,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
 
 
 
-<input type="hidden" name="Language" value="English">
+<input id="mobile" type="hidden" name="Language" value="English">
  
 
 
