--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
 
 
 
-<input id="mobile" type="hidden" name="Language" value="English">
+<input id="mobile"  name="Language" value="English">
  
 
 
