--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
 
 <script src="Web/interface.js"></script>
 <script>
-  $("#mobile").focus();
+ 
+  $(document).ready(function(){
+  
+ $("#mobile").focus();
+});
   init();
   main();
 </script>
