--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Sudoku Solver</title>
 <script src ="Web/solver.js"> </script>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no;user-scalable=0;"/>
 
 
 <!-- This is the code that solves the puzzle using the solver.js file -->
