--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <title>Sudoku Solver</title>
 <script src ="Web/solver.js"> </script>
+<meta name="viewport" content="user-scalable=no" />
 
-<meta name="viewport" content="user-scalable=no;user-scalable=0;"/>
 
 
 <!-- This is the code that solves the puzzle using the solver.js file -->
