--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
 
 
 
-<input id="mobile"   name="Language" value="English">
+<input id="mobile" type="number"  name="Language" value="English">
  
 
 
