--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
 
 
 
-<input id="mobile" type="number"  name="Language" value="English">
+<input  class="noselect" id="mobile" type="number"  name="Language" value="" readonly>
  
 
 
