--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <title>Sudoku Solver</title>
 <script src ="Web/solver.js"> </script>
-
+<meta name="viewport" content="user-scalable=no" />
 
 
 
@@ -28,8 +28,25 @@
 
 </div>
 
+<script>
+if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+ alert("welcome mobile user");
+
+}
+
+
+
+</script>
+
+
+
 <script src="Web/interface.js"></script>
 <script>
+ 
+  $(document).ready(function(){
+  
+ $("#mobile").focus();
+});
   init();
   main();
 </script>
@@ -39,7 +56,7 @@
 
 
 
-
+<input  class="noselect" id="mobile" type="number"  name="Language" value="">
  
 
 
