--- a/index.html
+++ b/index.html
@@ -1,67 +1,18 @@
-<!--This is my web page implementation of my Sudoku Solver-->
-<!--I'm using the BonsaiJS graphics library. https://bonsaijs.org/ -->
-
-
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="Web/myStyleSheet.css">
+<link rel="stylesheet" type="text/css" href="Web/style.css">
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <title>Sudoku Solver</title>
-<script src ="Web/solver.js"> </script>
+<script src="Web/ssolver.js"></script>
 <meta name="viewport" content="user-scalable=no" />
-
-
-
-<!-- This is the code that solves the puzzle using the solver.js file -->
-
-
-
-
 </head>
-
-
 <body>
-
- 
 <div id="page">
-   <canvas id="gridSpace" width="800" height="800" style="border:1px solid #d3d3d3;"></canvas>
-
+<canvas id="gridSpace" width="800" height="800" style="border:1px solid #d3d3d3"></canvas>
 </div>
-
-<script>
-if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
- alert("welcome mobile user");
-
-}
-
-
-
-</script>
-
-
-
-<script src="Web/interface.js"></script>
-<script>
- 
-  $(document).ready(function(){
-  
- $("#mobile").focus();
-});
-  init();
-  main();
-</script>
-
-
-
-
-
-
-<input  class="noselect" id="mobile" type="number"  name="Language" value="">
- 
-
-
+<script>if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){alert("welcome mobile user")}</script>
+<script src="Web/sinterface.js"></script>
+<script>$(document).ready(function(){$("#mobile").focus()});init();main();</script>
+<input class="noselect" id="mobile" type="number" name="Language" value="">
 </body>
-
-
 </html>
-
