--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <script src="Web/sinterface.js"></script>
 <script>$(document).ready(function(){$("#mobile").focus()});init();main();</script>
 <input class="noselect" id="mobile" type="number" name="Language" value="">
+<p><a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a></p>
 </body>
 </html>
