--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="Web/style.css">
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <title>Sudoku Solver</title>
-<script src="Web/ssolver.js"></script>
+<script src="Web/solver.js"></script>
 <meta name="viewport" content="user-scalable=no" />
 </head>
 <body>
@@ -11,7 +11,7 @@
 <canvas id="gridSpace" width="800" height="800" style="border:1px solid #d3d3d3"></canvas>
 </div>
 <script>if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){alert("welcome mobile user")}</script>
-<script src="Web/sinterface.js"></script>
+<script src="Web/interface.js"></script>
 <script>$(document).ready(function(){$("#mobile").focus()});init();main();</script>
 <input class="noselect" id="mobile" type="number" name="Language" value="">
 <p><a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a></p>
