--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <script src="Web/interface.js"></script>
 <script>$(document).ready(function(){$("#mobile").focus()});init();main();</script>
 <input class="noselect" id="mobile" type="number" name="Language" value="">
-<p><a href="http://www.w3schools.com/html/">Visit our HTML tutorial</a></p>
+<p><a href="https://github.com/Prgrmman/sudoku-solver/tree/master/Web">View the source code</a></p>
 </body>
 </html>
