--- a/Client_Server/index.html
+++ b/Client_Server/index.html
@@ -4,10 +4,10 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="Web/myStyleSheet.css">
+<link rel="stylesheet" type="text/css" href="myStyleSheet.css">
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <title>Sudoku Solver</title>
-<script src ="Web/solver.js"> </script>
+<script src ="solver.js"> </script>
 <meta name="viewport" content="user-scalable=no" />
 
 
@@ -40,7 +40,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(naviga
 
 
 
-<script src="Web/interface.js"></script>
+<script src="interface.js"></script>
 <script>
  
   $(document).ready(function(){
